# rust-launcher

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: data.rs  main.rs  test.rs  utils.rs
src/data/: commands.rs  config.rs  mod.rs
src/test/: mod.rs  ui_tests.rs
src/ui/: mod.rs  statusbar.rs  windows.rs
